[package]
authors = ["Jack Grigg <str4d@i2pmail.org>", "Jeff Burdges <burdges@gnunet.org>", "Syed Hosseini <syed@riseup.net>"]
description = "Aggregate BLS-like signatures"
documentation = "https://docs.rs/w3f-bls"
homepage = "https://github.com/w3f/bls"
license = "MIT/Apache-2.0"
name = "w3f-bls"
repository = "https://github.com/w3f/bls"
version = "0.1.9"
edition = "2018"

[workspace]
members = [
    ".",           # bls library
    "ed_by_bls12_381",   
    "sw_by_bls12_381",   
]

[workspace.package]
edition = "2018"
repository = "https://github.com/w3f/bls"

[workspace.dependencies]

ark-ff = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false, features = [ "derive" ] }
ark-serialize-derive = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0", default-features = false }

ark-bls12-381 = { version = "0.5.0", default-features = false, features = [ "curve" ] }
ark-bls12-377 = { version = "0.5.0", default-features = false, features = [ "curve" ] }

ark-algebra-bench-templates = { version = "0.5.0", path = "./bench-templates", default-features = false }
ark-algebra-test-templates = { version = "0.5.0", path = "./test-templates", default-features = false }
ark-test-curves = { version = "0.5.0", path = "./test-curves", default-features = false }

[dependencies]
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-serialize = { workspace = true }
ark-serialize-derive = { workspace = true }

arrayref = { version = "0.3", default-features = false }
rand = { version = "0.8.5", default-features = false}
rand_core = { version = "0.6", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
sha3 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false }


ark-bls12-381 = { workspace = true }
ark-bls12-377 = { workspace = true }

ark-ed-by-bls12-381 = {path = "./ed_by_bls12_381"}
ark-sw-by-bls12-381 = {path = "./sw_by_bls12_381"}
ark-bls12-381-g1 = {path = "./bls12_381_g1"}

zeroize = { version = "1.0", default-features = false, features = [ "zeroize_derive" ] }

[dev-dependencies]
hex-literal = "0.3.4"

[features]
default = ["std"]
std = ["rand/std"]
experimental = []
